--- a/pom.xml
+++ b/pom.xml
@@ -106,10 +106,10 @@
         <configuration>
           <executable>java</executable>
           <arguments>
-            <argument>-Dlog4j.configuration=file:src/main/java/log4j.properties</argument>
+            <argument>-Dlog4j.configuration=file:src/main/resources/log4j.properties</argument>
             <argument>-classpath</argument>
             <classpath />
-            <argument>net.jgp.books.spark.ch02.CsvToRelationalDatabaseApp</argument>
+            <argument>net.jgp.books.spark.ch02.lab110_csv_to_derby.CsvToApacheDerbyApp</argument>
           </arguments>
         </configuration>
       </plugin>
